# tiscamera.icbarcodedemo

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  readme.txt
lib/: CMakeLists.txt
lib/fmt/: CMakeLists.txt
lib/fmt/include/fmt/: core.h  format.h
tcamcamera/: CMakeLists.txt
tcamcamera/include/: cdeviceselectiondlg.h  cgrabber.h  cpropertiesdialog.h  customformatdlg.h  propertyctrl.h  utils.h  videoformat.h  videoformats.h
tcamcamera/src/: cdeviceselectiondlg.cpp  cgrabber.cpp  cpropertiesdialog.cpp  customformatdlg.cpp  propertyctrl.cpp  videoformat.cpp  videoformats.cpp
